--- a/public/assets/scss/component/_common.scss
+++ b/public/assets/scss/component/_common.scss
@@ -249,7 +249,7 @@ p {
   --clr-bg-bodylight: #eff1f5;
 }
 
-[data-theme='dark'] {
+[data-theme='dark'], .dark {
   --clr-common-white: #ffffff;
   --clr-common-black: #000000;
   --clr-common-blue: #2785ff;
