--- a/public/assets/scss/component/_common.scss
+++ b/public/assets/scss/component/_common.scss
@@ -771,6 +771,7 @@ p {
 }
 
 .basic-pagination ul li a:hover,
+.basic-pagination ul li a.current,
 .basic-pagination ul li span.current {
   background: var(--clr-theme-1);
   color: var(--clr-common-white);
