feat: reset password and verify acc page :rocket:

--- a/templates/email/resetPassword.html
+++ b/templates/email/resetPassword.html
@@ -151,7 +151,7 @@
               >
                 <p style="margin: 0">
                   Halo. Anda menerima email ini karena kami mendapatkan
-                  permintaan untuk mereset password akun MAGE 7 anda. Untuk
+                  permintaan untuk mereset password akun Ouralapak anda. Untuk
                   mereset password, klik tombol berikut.
                 </p>
               </td>
@@ -173,7 +173,7 @@
                             bgcolor="#b39c78"
                           >
                             <a
-                              href="{{link}}"
+                              href="http://ouralapak.id/reset-password/{{params.token}}"
                               target="_blank"
                               style="
                                 font-size: 20px;
@@ -233,7 +233,7 @@
               >
                 <p style="margin: 0">
                   <a href="#" target="_blank" style="color: #b39c78"
-                    >{{link}}</a
+                    >http://ouralapak.id/reset-password/{{params.token}}</a
                   >
                 </p>
               </td>
@@ -271,7 +271,7 @@
                   line-height: 25px;
                 "
               >
-                <p style="margin: 0"><br />MAGE ITS Team</p>
+                <p style="margin: 0"><br />Ouralapak Team</p>
               </td>
             </tr>
           </table>
