--- a/templates/email/verification.html
+++ b/templates/email/verification.html
@@ -173,7 +173,7 @@
                             bgcolor="#b39c78"
                           >
                             <a
-                              href="http://localhost:3000/api/auth/seller/activate/{{params.token}}"
+                              href="http://ouralapak.id/reset-password/{{params.token}}"
                               target="_blank"
                               style="
                                 font-size: 20px;
@@ -233,7 +233,7 @@
               >
                 <p style="margin: 0">
                   <a href="#" target="_blank" style="color: #b39c78"
-                    >http://ouralapak.id/api/auth/seller/activate/{{params.token}}</a
+                    >http://ouralapak.id/reset-password/{{params.token}}</a
                   >
                 </p>
               </td>
