--- a/public/assets/scss/component/_register.scss
+++ b/public/assets/scss/component/_register.scss
@@ -44,7 +44,7 @@
 }
 
 .single-input-unit {
-  label {
+  label:not(.file-input) {
     font-size: 16px;
     font-weight: 700;
     color: var(--clr-common-heading);
@@ -53,7 +53,7 @@
     margin-bottom: 12px;
   }
 
-  input {
+  input, .file-input {
     height: 50px;
     width: 100%;
     border: 1px solid var(--clr-bg-white);
@@ -71,6 +71,14 @@
       box-shadow: 0px 30px 50px rgba(28, 52, 94, 0.1);
       outline: none;
     }
+  }
+
+  .file-input {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
   }
 
   .extension {
