feat: ensure one login middleware :rocket:

--- a/public/assets/scss/component/_banner.scss
+++ b/public/assets/scss/component/_banner.scss
@@ -38,7 +38,8 @@
   filter: blur(2px);
 }
 
-[data-theme='dark'], .dark {
+[data-theme='dark'],
+.dark {
   .banner-bg-light {
     display: none;
   }
@@ -397,7 +398,8 @@
 }
 
 @-moz-document url-prefix() {
-  [data-theme='dark'] .oc-banner-client, .dark .oc-banner-client {
+  [data-theme='dark'] .oc-banner-client,
+  .dark .oc-banner-client {
     background: #3841547a;
   }
 
