--- a/public/assets/scss/component/_register.scss
+++ b/public/assets/scss/component/_register.scss
@@ -53,7 +53,8 @@
     margin-bottom: 12px;
   }
 
-  input, .file-input {
+  input,
+  .file-input {
     height: 50px;
     width: 100%;
     border: 1px solid var(--clr-bg-white);
