--- a/public/assets/scss/component/_activity.scss
+++ b/public/assets/scss/component/_activity.scss
@@ -28,7 +28,7 @@
       content: '';
       width: 100%;
       height: 2px;
-      background: var(--clr-theme-1);
+      background: var(--clr-primary-400);
       bottom: -1px;
       left: 0;
       opacity: 0;
@@ -36,7 +36,7 @@
     }
 
     &:hover {
-      color: var(--clr-theme-1);
+      color: var(--clr-primary-400);
       border: 0;
     }
   }
@@ -64,7 +64,7 @@
   }
 
   .nav-link.active {
-    color: var(--clr-theme-1);
+    color: var(--clr-primary-400);
     border: 0;
     background: none;
 
