--- a/public/assets/scss/component/_art.scss
+++ b/public/assets/scss/component/_art.scss
@@ -1191,7 +1191,6 @@
     padding: 0 5px;
     margin-right: 40px;
     position: relative;
-    border: 0;
 
     &:last-child {
       margin-right: 0px;
@@ -1202,7 +1201,7 @@
       content: '';
       width: 100%;
       height: 2px;
-      background: var(--clr-theme-1);
+      background: var(--clr-primary-400);
       bottom: 0;
       left: 0;
       opacity: 0;
@@ -1210,8 +1209,7 @@
     }
 
     &:hover {
-      color: var(--clr-theme-1);
-      border: 0;
+      color: var(--clr-primary-400);
     }
   }
 
@@ -1219,12 +1217,10 @@
     border: 1px solid var(--clr-bg-white);
     background: var(--clr-bg-white);
     border-radius: 10px;
-    padding: 0 30px;
   }
 
   .nav-link.active {
-    color: var(--clr-theme-1);
-    border: 0;
+    color: var(--clr-primary-400);
     background: none;
 
     &::before {
@@ -1422,7 +1418,7 @@
   border: 1px solid var(--clr-bg-white);
   background: var(--clr-bg-white);
   border-radius: 10px;
-  padding: 22px 30px 20px;
+  padding: 22px 0px 20px;
 
   ul {
     li {
