--- a/public/assets/scss/component/_creator.scss
+++ b/public/assets/scss/component/_creator.scss
@@ -114,8 +114,6 @@
 .artist-meta-type {
   font-size: 12px;
   line-height: 1;
-  margin-bottom: 7px;
-  color: var(--clr-common-body-text);
 }
 
 .artist-created {
@@ -693,7 +691,6 @@
 .creator-info-bar {
   border: 1px solid var(--clr-bg-white);
   background: var(--clr-bg-white);
-  padding: 35px 30px 35px;
   border-radius: 0 0 10px 10px;
   display: flex;
   flex-wrap: wrap;
@@ -727,6 +724,10 @@
     font-weight: 600;
     color: var(--clr-common-heading);
     display: inline-block;
+  }
+
+  .active .artist-meta-type {
+    color: #2EA0DE;
   }
 
   .artist-created {
@@ -766,9 +767,7 @@
 
   .nav-tabs {
     border: 1px solid var(--clr-bg-white);
-    background: var(--clr-bg-white);
     border-radius: 10px;
-    padding: 9px 40px;
     display: flex;
     justify-content: space-between;
 
@@ -778,7 +777,7 @@
   }
 
   .nav-link {
-    padding: 0px 5px;
+    padding: 0px 20px;
     height: 40px;
     border: 0;
     position: relative;
@@ -801,13 +800,14 @@
   }
 
   .nav-link.active {
-    color: var(--clr-theme-1);
-    border: 0;
-    background: none;
+    // color: var(--clr-theme-1);
+    // border: 0;
+    // background: none;
+    background-color: #D3EBF8;
 
-    &::before {
-      opacity: 1;
-    }
+    // &::before {
+    //   opacity: 1;
+    // }
   }
 
   .artist-meta-item-border {
